# fortress

./: .gitignore  Cargo.toml  README.md
admin/: package-lock.json  package.json  tsconfig.tsbuildinfo
admin/src/: middleware.ts
admin/src/app/: layout.tsx  page.tsx
admin/src/app/analytics/: page.tsx
admin/src/app/attack-monitor/: page.tsx
admin/src/app/attacks/: page.tsx
admin/src/app/auto-bans/: page.tsx
admin/src/app/blocklist/: page.tsx
admin/src/app/ip-reputation/: page.tsx
admin/src/app/knowledge-base/: page.tsx
admin/src/components/: auth-layout.tsx  country-flag.tsx  sidebar.tsx
admin/src/lib/: api.ts  constants.ts  i18n.ts  types.ts  useLocale.ts
data/: .api_key  .hmac_secret
scripts/: fortress-monitor.sh  iptables-ddos.sh  migrate.sh  rollback.sh
src/: main.rs
src/admin_api/: auth.rs  mod.rs  routes.rs  server.rs  websocket.rs
src/analytics/: alerting.rs  collector.rs  mod.rs  reporter.rs
src/config/: defaults.rs  mod.rs  service.rs  settings.rs
src/models/: connection.rs  metrics.rs  mod.rs  request.rs  threat.rs
src/protection/: asn.rs  auto_ban.rs  behavioral.rs  bot_whitelist.rs  challenge.rs  cloudflare.rs  custom_rules.rs  distributed.rs  escalation.rs  fingerprint.rs  geoip.rs  header_analysis.rs  ip_reputation.rs  l4_tracker.rs  managed_rules.rs  mobile_proxy.rs  mod.rs  pipeline.rs  rate_limiter.rs  slowloris.rs
src/proxy/: access_log.rs  connection.rs  health_check.rs  http_handler.rs  mod.rs  server.rs  service_router.rs  tls.rs  websocket.rs
src/storage/: blocklist.rs  memory.rs  mod.rs  sqlite.rs
(+11 files in other folders)
