[package]
name = "fortress"
version = "1.0.0"
edition = "2021"
description = "Enterprise-grade anti-DDoS reverse proxy"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
dashmap = "6"
maxminddb = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
ipnet = "2"
parking_lot = "0.12"
arc-swap = "1"
socket2 = { version = "0.5", features = ["all"] }
futures-util = "0.3"
pin-project-lite = "0.2"
http = "1"
tokio-util = { version = "0.7", features = ["io"] }
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
